# extcalc

calc/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
calc/man/: Makefile.am  Makefile.in  calc.1
calc/src/: Makefile.am  Makefile.in  calc.cpp  consolecalc.h  global.cpp  global.h
concalc/: CMakeLists.txt  ChangeLog  Makefile.in  README  configure  configure.ac  svn-commit.tmp
concalc/man/: Makefile.am  Makefile.in  concalc.1
concalc/src/: Makefile.am  Makefile.in  concalc.cpp  concalc.h  global.cpp  global.h  list.h
extcalc/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LIESMICH  LISEZ-MOI.txt  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
extcalc/doc/: Makefile.am  Makefile.in  dev_docu.html  help_de.html  help_en.html  help_fr.html
extcalc/share/: Makefile.am  Makefile.in  extcalc.desktop  french.qm  german.qm  icons.qrc  license.txt  snake
extcalc/src/: Makefile.am  Makefile.in  buttons.cpp  buttons.h  calcinput.cpp  calcinput.h  calclocale.h  calcpref.cpp  calcpref.h  calctable.cpp  calctable.h  calcwidget.cpp  calcwidget.h  catalog.cpp  catalog.h  config.h  extcalc.cpp  extcalc.h  extcalc.pro  french.ts  functiontable.cpp  functiontable.h  german.ts  global.cpp  global.h  graph.cpp  graph.h  graphinput.cpp  graphinput.h  graphout.cpp  graphout.h  graphpref.cpp  graphpref.h  graphsetdialog.cpp  graphsetdialog.h  graphsolve.cpp  graphsolve.h  importdialog.cpp  importdialog.h  matrixwidget.cpp  (+48 more)
