documentationdir = $(datadir)/extcalc/doc



documentation_DATA = help_de.html \
                     help_en.html \
					 dev_docu.html  \
					 alpha.jpg \
					 calculator.jpg \
					 analyse.jpg \
					 curoot.jpg \
					 diffbutton.jpg \
					 diff.jpg \
					 graph.jpg \
					 3dgraph.jpg \
					 integralbutton.jpg \
					 integral.jpg \
					 nrootbutton.jpg \
					 nroot.jpg \
					 randbutton.jpg \
					 random.jpg \
					 setbutton.jpg \
					 setvar.jpg \
					 shift.jpg \
					 sqrtbracket.jpg \
					 sqrtbutton.jpg \
					 sqrt.jpg \
					 usevar.jpg \
					 table.jpg \
					 scriptedit.jpg \
					 scriptrun.jpg \
					 screenshot.jpg \
					 matvec.jpg
