licensedir = $(datadir)/extcalc/data
icondir = $(datadir)/extcalc/data
menuicondir = /usr/share/icons
translationsdir = $(datadir)/extcalc/data
applicationdir = /usr/share/applications



license_DATA = license.txt
icon_DATA = icon22.png icon48.png modified.png circle.png free.png line.png open.png rect.png rubber.png text.png
menuicon_DATA = icon48.png
translations_DATA = qt_de.qm
application_DATA = extcalc.desktop
