licensedir = $(datadir)/extcalc/data
icondir = $(datadir)/extcalc/data
exampledir = $(datadir)/extcalc/data
menuicondir = /usr/share/icons
translationsdir = $(datadir)/extcalc/data
applicationdir = /usr/share/applications



license_DATA = license.txt
icon_DATA = icon22.png icon48.png modified.png circle.png free.png line.png open.png rect.png rubber.png text.png editcopy.png editcut.png editdelete.png editpaste.png exec.png fileexport.png fileimport.png filenew.png filesaveas.png save_all.png redo.png undo.png view_top_bottom.png angle.png binary.png scientific.png view_remove.png
menuicon_DATA = icon48.png
translations_DATA = qt_de.qm
example_DATA = crossproduct dotproduct matrixproduct matrix-vector snake
application_DATA = extcalc.desktop

