bin_PROGRAMS = extcalc

extcalc_SOURCES = extcalc.h \
				  buttons.h \
				  calclocale.h \
				  calctable.h \
				  calcinput.h \
				  calcwidget.h \
 		                  global.h \
				  graph.h \
				  graphinput.h \
				  graphout.h \
				  graphpref.h \
				  graphsolve.h \
				  calcpref.h \
				  list.h \
				  functiontable.h \
				  table.h \
				  tablepref.h \
				  scriptedit.h \
				  scriptpref.h \
				  scriptio.h \
				  matrixwidget.h \
				  statistics.h \
				  extcalc.cpp \
				  buttons.cpp \
				  calctable.cpp \
				  calcwidget.cpp \
				  calcinput.cpp \
                		  global.cpp \
				  graph.cpp \
				  graphinput.cpp \
				  graphout.cpp \
				  graphpref.cpp \
				  graphsolve.cpp \
				  calcpref.cpp \
				  functiontable.cpp \
				  table.cpp \
				  tablepref.cpp \
				  scriptedit.cpp \
				  scriptpref.cpp \
				  scriptio.cpp \
				  matrixwidget.cpp \
				  statistics.cpp \
				  moc_extcalc.cpp \
				  moc_buttons.cpp \
				  moc_calctable.cpp \
				  moc_calcwidget.cpp \
				  moc_calcinput.cpp \
				  moc_graph.cpp \
				  moc_graphout.cpp \
				  moc_graphpref.cpp \
				  moc_graphsolve.cpp \
				  moc_calcpref.cpp \
				  moc_table.cpp \
				  moc_functiontable.cpp \
				  moc_tablepref.cpp \
				  moc_scriptedit.cpp \
				  moc_scriptpref.cpp \
				  moc_scriptio.cpp \
				  moc_matrixwidget.cpp \
				  moc_statistics.cpp
